--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,34 +9,42 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
+
     <context-param>
         <param-name>primefaces.THEME</param-name>
         <param-value>bootstrap</param-value>
     </context-param>
+
     <context-param>
         <param-name>primefaces.FONT_AWESOME</param-name>
         <param-value>true</param-value>
     </context-param>
+
     <context-param>
         <param-name>BootsFaces_USETHEME</param-name>
         <param-value>true</param-value>
     </context-param>
+
     <context-param>
         <param-name>BootsFaces_THEME</param-name>
         <param-value>spacelab</param-value>
     </context-param>
+
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
+
     <welcome-file-list>
         <welcome-file>/pages/index.xhtml</welcome-file>
     </welcome-file-list>
+
     <security-constraint>
         <display-name>Admin-Constraint</display-name>
         <web-resource-collection>
@@ -47,6 +55,7 @@
             <role-name>admin</role-name>
         </auth-constraint>
     </security-constraint>
+
     <security-constraint>
         <display-name>Editor-Constraint</display-name>
         <web-resource-collection>
@@ -55,9 +64,9 @@
         </web-resource-collection>
         <auth-constraint>
             <role-name>admin</role-name>
-            <role-name>baker</role-name>
         </auth-constraint>
     </security-constraint>
+
     <security-constraint>
         <display-name>Login-Constraint</display-name>
         <web-resource-collection>
@@ -69,31 +78,17 @@
             <role-name>*</role-name>
         </auth-constraint>
     </security-constraint>
-    <security-constraint>
-        <display-name>Baker-Constraint</display-name>
-        <web-resource-collection>
-            <web-resource-name>Baker Info Screen</web-resource-name>
-            <url-pattern>/pages/bakerinfoscreen.xhtml</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <role-name>baker</role-name>
-        </auth-constraint>
-    </security-constraint>
+
     <login-config>
         <auth-method>FORM</auth-method>
-        <realm-name>pfadDomain</realm-name>
+        <realm-name>ticketsDomain</realm-name>
         <form-login-config>
             <form-login-page>/login.xhtml</form-login-page>
             <form-error-page>/login.xhtml</form-error-page>
         </form-login-config>
     </login-config>
+
     <security-role>
         <role-name>admin</role-name>
-    </security-role>
-    <security-role>
-        <role-name>baker</role-name>
-    </security-role>
-    <security-role>
-        <role-name>customer</role-name>
     </security-role>
 </web-app>
