--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -75,7 +75,7 @@
         </web-resource-collection>
         <auth-constraint>
             <description>all authenticated users</description>
-            <role-name>*</role-name>
+            <role-name>admin</role-name>
         </auth-constraint>
     </security-constraint>
 
