--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+*.iml
 
 # User-specific stuff
 .idea/**/workspace.xml
@@ -12,6 +13,14 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/**/artifacts
+
+# Other
+.idea/**/compiler.xml
+.idea/**/encodings.xml
+.idea/**/misc.xml
+.idea/**/modules.xml
+.idea/**/vcs.xml
 
 # Generated files
 .idea/**/contentModel.xml
