--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -88,6 +88,7 @@
         <auth-constraint>
             <description>all authenticated users</description>
             <role-name>admin</role-name>
+            <role-name>editor</role-name>
         </auth-constraint>
     </security-constraint>
 
