--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 
 		<version.primefaces>6.2</version.primefaces>
 		<version.bootsfaces>1.4.1</version.bootsfaces>
+		<version.omnifaces>3.2</version.omnifaces>
 		<version.guava>23.6-jre</version.guava>
 		<version.swagger>2.0.7</version.swagger>
 	</properties>
@@ -191,6 +192,12 @@
 			<artifactId>dbunit</artifactId>
 			<scope>test</scope>
 			<version>2.5.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.omnifaces</groupId>
+			<artifactId>omnifaces</artifactId>
+			<version>${version.omnifaces}</version>
 		</dependency>
 
 		<dependency>
