--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -88,7 +88,7 @@
         <display-name>Login-Constraint</display-name>
         <web-resource-collection>
             <web-resource-name>loginsuccess</web-resource-name>
-            <url-pattern>/pages/index.xhtml</url-pattern>
+            <url-pattern>/pages/loginsuccess.xhtml</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <description>all authenticated users</description>
