--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -51,6 +51,19 @@
 
     <!-- Security Constraints -->
     <security-constraint>
+        <display-name>Internal-Pages-Constraint</display-name>
+        <web-resource-collection>
+            <web-resource-name>Internal-Pages</web-resource-name>
+            <url-pattern>/pages/internal/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+            <role-name>editor</role-name>
+            <role-name>customer</role-name>
+        </auth-constraint>
+    </security-constraint>
+
+    <security-constraint>
         <display-name>Admin-Constraint</display-name>
         <web-resource-collection>
             <web-resource-name>Admin-Pages</web-resource-name>
